devops/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flash-svc
  namespace: stage-front
spec:
  ports:
    - name: flash-svc-port
      port: 3000
      targetPort: flash-port
  selector:
    app: flash-app
  type: ClusterIP
