devops/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flash-ingress
  namespace: stage-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: flash.staging.k8s.deligram.com
      http:
        paths:
          - backend:
              serviceName: flash-svc
              servicePort: 3000
            path: /
  tls:
    - hosts:
        - flash.staging.k8s.deligram.com
      secretName: tls-flash-staging-k8s-deligram-com
